--- a/projects.html
+++ b/projects.html
@@ -16,10 +16,12 @@
             </ul>
         </nav>
     </header>
-    <main>
+    
+    <main class="content">
         <h1>Projects</h1>
         <p>Раздел для проектов.</p>
     </main>
+
     <script src="script.js"></script>
 </body>
 </html>
