--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
     <header class="navbar">
         <img src="logo.jpg" alt="Logo" class="logo">
         <nav>
-            <ul class="nav-links">
-                <li><a href="#">Home</a></li>
-                <li><a href="#">Projects</a></li>
+             <ul class="nav-links">
+                <li><a href="index.html">Home</a></li>
+                <li><a href="projects.html" class="active">Projects</a></li>
             </ul>
         </nav>
     </header>
