--- a/projects.html
+++ b/projects.html
@@ -7,19 +7,43 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+
+    <!-- Меню -->
     <header class="navbar">
-        <img src="logo.jpg" alt="Logo" class="logo">
+        <a href="https://si-website-production.up.railway.app/">
+            <img src="logo.jpg" alt="Logo" class="logo">
+        </a>
         <nav>
             <ul class="nav-links">
-                <li><a href="index.html">Home</a></li>
-                <li><a href="projects.html" class="active">Projects</a></li>
+                <li><a href="index.html" class="active">Home</a></li>
+                <li><a href="#projects">Projects</a></li>
             </ul>
         </nav>
     </header>
-    
-    <main class="content">
-        <h1>Projects</h1>
-        <p>Раздел для проектов.</p>
+
+    <!-- Основной контент -->
+    <main>
+        <section id="projects">
+            <h2>Наши проекты</h2>
+            <div class="projects-container">
+
+                <!-- Podcast (2023) -->
+                <div class="project">
+                    <a href="https://www.roblox.com/games/15477270728/Podcast">
+                        <img src="podcast-thumbnail.jpg" alt="Podcast">
+                        <h3>Podcast</h3>
+                        <p class="year">2023</p>
+                    </a>
+                </div>
+
+                <!-- Пустые слоты для будущих игр -->
+                <div class="project empty"><h3>Скоро...</h3></div>
+                <div class="project empty"><h3>Скоро...</h3></div>
+                <div class="project empty"><h3>Скоро...</h3></div>
+                <div class="project empty"><h3>Скоро...</h3></div>
+
+            </div>
+        </section>
     </main>
 
     <script src="script.js"></script>
