--- a/projects.html
+++ b/projects.html
@@ -23,27 +23,32 @@
 
     <!-- Основной контент -->
     <main>
-        <section id="projects">
-            <h2>Наши проекты</h2>
-            <div class="projects-container">
+       <section id="projects">
+    <h2>Наши проекты</h2>
+    <div class="projects-container">
 
-                <!-- Podcast (2023) -->
-                <div class="project">
-                    <a href="https://www.roblox.com/games/15477270728/Podcast">
-                        <img src="podcast-thumbnail.jpg" alt="Podcast">
-                        <h3>Podcast</h3>
-                        <p class="year">2023</p>
-                    </a>
+        <!-- Podcast (2023) -->
+        <div class="project">
+            <a href="https://www.roblox.com/games/15477270728/Podcast">
+                <div class="image-wrapper">
+                    <img src="podcast-thumbnail.jpg" alt="Podcast">
                 </div>
+                <header>
+                    <h3>Podcast</h3>
+                    <p class="year">2023</p>
+                </header>
+                <button class="play-btn">Играть</button>
+            </a>
+        </div>
 
-                <!-- Пустые слоты для будущих игр -->
-                <div class="project empty"><h3>Скоро...</h3></div>
-                <div class="project empty"><h3>Скоро...</h3></div>
-                <div class="project empty"><h3>Скоро...</h3></div>
-                <div class="project empty"><h3>Скоро...</h3></div>
+        <!-- Пустые слоты для будущих игр -->
+        <div class="project empty"><h3>Скоро...</h3></div>
+        <div class="project empty"><h3>Скоро...</h3></div>
+        <div class="project empty"><h3>Скоро...</h3></div>
+        <div class="project empty"><h3>Скоро...</h3></div>
 
-            </div>
-        </section>
+    </div>
+</section>
     </main>
 
     <script src="script.js"></script>
