--- a/index.html
+++ b/index.html
@@ -20,37 +20,43 @@
             </ul>
         </nav>
     </header>
+
+    <!-- Основной контент -->
     <main>
         <section id="projects">
-    <h2>Наши проекты</h2>
-    <div class="projects-container">
+            <h2>Наши проекты</h2>
+            <div class="projects-container">
 
-        <!-- Podcast (2023) -->
-        <div class="project">
-            <a href="https://www.roblox.com/games/15477270728/Podcast">
-                <div class="image-wrapper">
-                    <img src="https://tr.rbxcdn.com/180DAY-311a234bd5db689254fc4932355d3f5e/768/432/Image/Webp/noFilter" alt="Podcast">
+                <!-- Пустой слот 1 -->
+                <div class="project empty"><h3>Скоро...</h3></div>
+
+                <!-- Podcast (2023) - по центру -->
+                <div class="project active">
+                    <a href="https://www.roblox.com/games/15477270728/Podcast">
+                        <div class="image-wrapper">
+                            <img src="https://tr.rbxcdn.com/180DAY-311a234bd5db689254fc4932355d3f5e/768/432/Image/Webp/noFilter" alt="Podcast">
+                        </div>
+                        <header>
+                            <h3>Podcast</h3>
+                            <p class="year">2023</p>
+                        </header>
+                        <button class="play-btn">Играть</button>
+                    </a>
                 </div>
-                <header>
-                    <h3>Podcast</h3>
-                    <p class="year">2023</p>
-                </header>
-                <button class="play-btn">Играть</button>
-            </a>
-        </div>
-        <div class="project empty"><h3>Скоро...</h3></div>
-        <div class="project empty"><h3>Скоро...</h3></div>
-        <div class="project empty"><h3>Скоро...</h3></div>
-        <div class="project empty"><h3>Скоро...</h3></div>
 
-    </div>
+                <!-- Пустой слот 2 -->
+                <div class="project empty"><h3>Скоро...</h3></div>
 
-    <div class="nav-arrows">
-        <button id="left-arrow" class="arrow-btn">◀</button>
-        <button id="right-arrow" class="arrow-btn">▶</button>
-    </div>
-</section>
+            </div>
+
+            <!-- Стрелки для прокрутки -->
+            <div class="nav-arrows">
+                <button id="left-arrow" class="arrow-btn">🠔</button>
+                <button id="right-arrow" class="arrow-btn">🠖</button>
+            </div>
+        </section>
     </main>
+
     <script src="script.js"></script>
 </body>
 </html>
