--- a/index.html
+++ b/index.html
@@ -1,58 +1,63 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>siph industry</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>siph industry</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
+  <!-- Верхняя панель -->
+  <header class="navbar">
+    <a href="https://si-website-production.up.railway.app/">
+      <img src="logo.jpg" alt="Logo" class="si_logo" />
+    </a>
+    <nav>
+      <ul class="nav-links">
+        <li><a href="index.html" class="active">Home</a></li>
+        <li><a href="#projects">Projects</a></li>
+      </ul>
+    </nav>
+  </header>
 
-    <!-- Меню -->
-    <header class="navbar">
-        <a href="https://si-website-production.up.railway.app/">
-            <img src="logo.jpg" alt="Logo" class="logo">
-        </a>
-        <nav>
-            <ul class="nav-links">
-                <li><a href="index.html" class="active">Home</a></li>
-                <li><a href="#projects">Projects</a></li>
-            </ul>
-        </nav>
-    </header>
+  <!-- Основной контент -->
+  <main>
+    <section id="projects">
+      <h2>Наши проекты</h2>
+      <!-- Обёртка для слайдера с проектами -->
+      <div class="projects-wrapper">
+        <div class="projects-container">
+          <!-- Первый слот (пустой) -->
+          <div class="project empty">
+            <h3>Скоро...</h3>
+          </div>
+          
+          <!-- Активный проект: Podcast (2023) – всегда по центру -->
+          <div class="project active">
+            <a href="https://www.roblox.com/games/15477270728/Podcast">
+              <div class="image-wrapper">
+                <img src="https://tr.rbxcdn.com/180DAY-311a234bd5db689254fc4932355d3f5e/768/432/Image/Webp/noFilter" alt="Podcast" />
+              </div>
+              <header>
+                <h3>Podcast</h3>
+                <p class="year">2023</p>
+              </header>
+              <button class="play-btn">Играть</button>
+            </a>
+          </div>
+          
+          <!-- Третий слот (пустой) -->
+          <div class="project empty">
+            <h3>Скоро...</h3>
+          </div>
+        </div>
+        <!-- Стрелки (расположены поверх слайдера) -->
+        <button id="left-arrow" class="arrow-btn">🠔</button>
+        <button id="right-arrow" class="arrow-btn">🠖</button>
+      </div>
+    </section>
+  </main>
 
-    <!-- Основной контент -->
-    <main>
-        <section id="projects">
-            <h2>Наши проекты</h2>
-            <div class="projects-container">
-
-                <!-- Пустой слот 1 -->
-                <div class="project empty"><h3>Скоро...</h3></div>
-
-                <!-- Podcast (2023) - по центру -->
-                <div class="project active">
-                    <a href="https://www.roblox.com/games/15477270728/Podcast">
-                        <button id="left-arrow" class="arrow-btn">🠔</button>
-                        <div class="image-wrapper">
-                            <img src="https://tr.rbxcdn.com/180DAY-311a234bd5db689254fc4932355d3f5e/768/432/Image/Webp/noFilter" alt="Podcast">
-                        </div>
-                        <header>
-                            <h3>Podcast</h3>
-                            <p class="year">2023</p>
-                        </header>
-                        <button class="play-btn">Играть</button>
-                        <button id="right-arrow" class="arrow-btn">🠖</button>
-                    </a>
-                </div>
-
-                <!-- Пустой слот 2 -->
-                <div class="project empty"><h3>Скоро...</h3></div>
-
-            </div>
-        </section>
-    </main>
-
-    <script src="script.js"></script>
+  <script src="script.js"></script>
 </body>
 </html>
