--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <h3>Скоро...</h3>
           </div>
         </div>
-        <!-- Стрелки пролистывания, располагаются поверх слайдера -->
+        <!-- Стрелки пролистывания -->
         <button id="left-arrow" class="arrow-btn">🠔</button>
         <button id="right-arrow" class="arrow-btn">🠖</button>
       </div>
