--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <!-- Верхнее меню -->
   <header class="navbar">
     <a href="https://si-website-production.up.railway.app/">
-      <img src="logo.jpg" alt="Logo" class="si_logo" />
+      <img src="logo.jpg" alt="Logo" class="si_logo">
     </a>
     <nav>
       <ul class="nav-links">
@@ -35,7 +35,7 @@
           <div class="project active">
             <a href="https://www.roblox.com/games/15477270728/Podcast">
               <div class="image-wrapper">
-                <img src="https://tr.rbxcdn.com/180DAY-311a234bd5db689254fc4932355d3f5e/768/432/Image/Webp/noFilter" alt="Podcast" />
+                <img src="https://tr.rbxcdn.com/180DAY-311a234bd5db689254fc4932355d3f5e/768/432/Image/Webp/noFilter" alt="Podcast">
               </div>
               <header>
                 <h3>Podcast</h3>
@@ -52,6 +52,37 @@
         <!-- Стрелки пролистывания -->
         <button id="left-arrow" class="arrow-btn">🠔</button>
         <button id="right-arrow" class="arrow-btn">🠖</button>
+      </div>
+    </section>
+    
+    <!-- Дополнительный текстовый блок (25 строк) -->
+    <section id="text-section">
+      <div class="text-content">
+        <p>siph industry</p>
+        <p>siph industry</p>
+        <p>siph industry</p>
+        <p>siph industry</p>
+        <p>siph industry</p>
+        <p>siph industry</p>
+        <p>siph industry</p>
+        <p>siph industry</p>
+        <p>siph industry</p>
+        <p>siph industry</p>
+        <p>siph industry</p>
+        <p>siph industry</p>
+        <p>siph industry</p>
+        <p>siph industry</p>
+        <p>siph industry</p>
+        <p>siph industry</p>
+        <p>siph industry</p>
+        <p>siph industry</p>
+        <p>siph industry</p>
+        <p>siph industry</p>
+        <p>siph industry</p>
+        <p>siph industry</p>
+        <p>siph industry</p>
+        <p>siph industry</p>
+        <p>siph industry</p>
       </div>
     </section>
   </main>
