--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <!-- Верхнее меню -->
   <header class="navbar">
     <a href="https://si-website-production.up.railway.app/">
-      <img src="logo.jpg" alt="Logo" class="si_logo">
+      <img src="logo.jpg" alt="Logo" class="si_logo" />
     </a>
     <nav>
       <ul class="nav-links">
@@ -20,8 +20,39 @@
     </nav>
   </header>
 
-  <!-- Основной контент -->
   <main>
+    <!-- Текстовый блок сверху проектов -->
+    <section id="intro-top">
+      <div class="intro-content">
+        <p>siph industry</p>
+        <p>siph industry</p>
+        <p>siph industry</p>
+        <p>siph industry</p>
+        <p>siph industry</p>
+        <p>siph industry</p>
+        <p>siph industry</p>
+        <p>siph industry</p>
+        <p>siph industry</p>
+        <p>siph industry</p>
+        <p>siph industry</p>
+        <p>siph industry</p>
+        <p>siph industry</p>
+        <p>siph industry</p>
+        <p>siph industry</p>
+        <p>siph industry</p>
+        <p>siph industry</p>
+        <p>siph industry</p>
+        <p>siph industry</p>
+        <p>siph industry</p>
+        <p>siph industry</p>
+        <p>siph industry</p>
+        <p>siph industry</p>
+        <p>siph industry</p>
+        <p>siph industry</p>
+      </div>
+    </section>
+
+    <!-- Секция проектов -->
     <section id="projects">
       <h2>Наши проекты</h2>
       <div class="projects-wrapper">
@@ -54,10 +85,10 @@
         <button id="right-arrow" class="arrow-btn">🠖</button>
       </div>
     </section>
-    
-    <!-- Дополнительный текстовый блок (25 строк) -->
-    <section id="text-section">
-      <div class="text-content">
+
+    <!-- Текстовый блок снизу проектов -->
+    <section id="intro-bottom">
+      <div class="intro-content">
         <p>siph industry</p>
         <p>siph industry</p>
         <p>siph industry</p>
