--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     </a>
     <nav>
       <ul class="nav-links">
+        <!-- По умолчанию выставляем Home active, далее JS обновит класс -->
         <li><a href="index.html" class="active">Home</a></li>
         <li><a href="#projects">Projects</a></li>
       </ul>
@@ -21,7 +22,7 @@
   </header>
 
   <main>
-    <!-- Текстовый блок сверху проектов -->
+    <!-- Текстовый блок сверху проектов (25 строк) -->
     <section id="intro-top">
       <div class="intro-content">
         <p>siph industry</p>
@@ -86,7 +87,7 @@
       </div>
     </section>
 
-    <!-- Текстовый блок снизу проектов -->
+    <!-- Текстовый блок снизу проектов (25 строк) -->
     <section id="intro-bottom">
       <div class="intro-content">
         <p>siph industry</p>
