--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   </header>
 
   <main>
-    <!-- Текстовый блок сверху проектов (25 строк) -->
+    <!-- Текстовый блок сверху проектов -->
     <section id="intro-top">
       <div class="intro-content">
         <p>siph industry</p>
@@ -87,7 +87,7 @@
       </div>
     </section>
 
-    <!-- Текстовый блок снизу проектов (25 строк) -->
+    <!-- Текстовый блок снизу проектов -->
     <section id="intro-bottom">
       <div class="intro-content">
         <p>siph industry</p>
